<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome"
        android:textSize="30sp" />
    <requestFocus />

    <EditText
        android:id="@+id/textpassword_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textusername_field"
        android:layout_below="@+id/textusername_field"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Password" />
    	

    <EditText
        android:id="@+id/textusername_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:ems="10"
        android:hint="@string/Username" />
    
	<RadioGroup
	    android:layout_below="@+id/textpassword_field"
	    android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:checkedButton="@+id/Nurse"
    	android:id="@+id/RG">

		<RadioButton
		    android:id="@+id/Nurse"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="24dp"
		    android:text="@string/Nurse" />
	    
		<RadioButton
		    android:id="@+id/Physicians"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    
		    android:text="@string/Physicians" />
  
	    
    </RadioGroup>

	

	<Button
	    android:id="@+id/login"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/RG"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="18dp"
	    android:onClick="LoginAdoctor"
	    android:text="@string/Login" />

</RelativeLayout>