<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddVitalsignActivity" >

        <TextView
            android:id="@+id/add_vital_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/add_vital_sign"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/hcnumbertext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/update_vital_sign"
            android:layout_below="@+id/add_vital_sign"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:hint="@string/hcnumber"
            android:gravity="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/input_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/hcnumbertext"
            android:layout_below="@+id/input_blood_pressure"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_temperature"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/heart_rate"
            android:layout_below="@+id/hcnumbertext"
            android:gravity="center"
            android:layout_marginTop="17dp"
            android:text="@string/blood_pressure" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/input_temperature"
            android:layout_alignBottom="@+id/input_temperature"
            android:layout_alignLeft="@+id/heart_rate"
            android:text="@string/temperature"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/input_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/heart_rate"
            android:layout_alignBottom="@+id/heart_rate"
            android:layout_alignRight="@+id/input_temperature"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/input_heart_rate"
            android:inputType="number"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hcardnumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/hcnumbertext"
            android:layout_alignBottom="@+id/hcnumbertext"
            android:layout_alignLeft="@+id/blood_pressure"
            android:text="@string/HCardNumber" />

        <TextView
            android:id="@+id/heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_temperature"
            android:layout_marginTop="20dp"
            android:layout_toLeftOf="@+id/add_vital_sign"
            android:text="@string/heart_rate"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/update_vital_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/back"
            android:layout_below="@+id/input_temperature"
            android:layout_marginTop="77dp"
            android:layout_toRightOf="@+id/blood_pressure"
            android:onClick="update_vital_sign"
            android:text="@string/save" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/update_vital_sign"
            android:layout_marginTop="30dp"
            android:layout_toRightOf="@+id/blood_pressure"
            android:onClick="back"
            android:text="@string/back" />

        <EditText
            android:id="@+id/input_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/blood_pressure"
            android:layout_alignBottom="@+id/blood_pressure"
            android:layout_toRightOf="@+id/add_vital_sign"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_blood_pressure2"
            android:inputType="number"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/diastolic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/input_blood_pressure"
            android:layout_alignBottom="@+id/input_blood_pressure"
            android:layout_alignLeft="@+id/input_temperature"
            android:layout_toLeftOf="@+id/input_blood_pressure"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/input_blood_pressure"
            android:inputType="number"
            android:textSize="14sp" >

            <requestFocus />
        </EditText>

</RelativeLayout>
