<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewRecordActivity" >

    <TextView
        android:id="@+id/nametext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignRight="@+id/welcome"
        android:layout_marginLeft="56dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/nametext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcome"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="10dp"
        android:text="@string/nametext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:text="@string/hcnumbertext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/hcnumbertext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView03"
        android:layout_alignBottom="@+id/TextView03"
        android:layout_alignLeft="@+id/nametext"
        android:text="@string/hcnumbertext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="10dp"
        android:text="@string/Birthdaytext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/birthdaytext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView04"
        android:layout_alignBottom="@+id/TextView04"
        android:layout_alignLeft="@+id/hcnumbertext"
        android:text="@string/Birthdaytext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="10dp"
        android:text="@string/arrivaltimetext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/arrivaltimetext"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView01"
        android:layout_alignBottom="@+id/TextView01"
        android:layout_alignLeft="@+id/birthdaytext"
        android:text="@string/arrivaltimetext"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="15dp"
        android:text="@string/urgencytext"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/urgencytext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView02"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/arrivaltimetext"
        android:text="@string/urgencytext"
        android:textSize="20sp" />
	
    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView02"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="10dp"
        android:text="@string/seedoctortext"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/seedoctortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/TextView05"
        android:layout_alignBottom="@+id/TextView05"
        android:layout_toRightOf="@+id/TextView01"
        android:text="@string/seedoctortext"
        android:textSize="20sp" />

    <Button
        android:id="@+id/vitalsignbuttion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView05"
        android:layout_below="@+id/TextView05"
        android:layout_marginTop="15dp"
        android:layout_toLeftOf="@+id/urgencytext"
        android:onClick="vitalsign"
        android:text="@string/vitalsignbutton" />

    

    <Button
        android:id="@+id/prescriptionbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/vitalsignbuttion"
        android:layout_alignBottom="@+id/vitalsignbuttion"
        android:layout_alignRight="@+id/arrivaltimetext"
        android:layout_marginRight="22dp"
        android:onClick="prescription"
        android:text="@string/prescriptionbutton" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/vitalsignbuttion"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="101dp"
        android:onClick="back"
        android:text="@string/back" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/Patient_Record"
        android:textSize="25sp" />

</RelativeLayout>